--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: label_textfield_widget
 description: A new Flutter package project.
 version: 0.0.1
-author:
-homepage:
+author: Trong Dinh <trongdth@gmail.com>
+homepage: http://www.mroomsoft.com
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
